--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
 </head>
 <body>
-    <h1>Home</h1>
-    <p>Salut google</p>
-    <br><br><br><br><br>
-
-    <h2> Test d'écriture </h2>
-        <p>Salut à toi</p>
+    <h1>Welcome to the {{ . }}</h1>
 </body>
 </html>
