--- a/web/style_menu.css
+++ b/web/style_menu.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial;
     text-align: center;
     margin-top: 50px;
     background-image: url(images/hangman_fond_menu.webp);
