--- a/web/style_menu.css
+++ b/web/style_menu.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial;
+    font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 50px;
     background-image: url(images/hangman_fond_menu.webp);
@@ -46,5 +46,15 @@ body {
     display: flex;
     justify-content: center;
     margin-bottom: 20px; 
+}.credits {
+    text-decoration: none;
+    color: white;
+    background-color: #960018;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 400px;
+    display: inline-block;
+}.credits:hover{
+    background-color: #700013;; 
 }
     
